# sanlam-ingestion-pipeline

./: .env  .env_gen.sh  .gitignore  ingestion-analytics.compose.yml  readme.md
flink/: flink-compose.yml
flink/jobs/analytics-flink-job/: dependency-reduced-pom.xml  package-submit-job.sh  pom.xml
flink/jobs/analytics-flink-job/src/main/java/com/sanlam/analytics/flink/: WindowAggregatorJob.java
flink/jobs/analytics-flink-job/src/main/java/com/sanlam/analytics/flink/dto/: KeyValue.java  Post.java  TrendingPost.java
flink/jobs/analytics-flink-job/src/test/java/com/sanlam/analytics/flink/: AppTest.java
flink/jobs/ingest-batch-job/: dependency-reduced-pom.xml  package-submit-job.sh  pom.xml
flink/jobs/ingest-batch-job/src/main/java/com/sanlam/ingest/flink/: IngestBatchJob.java
flink/jobs/ingest-batch-job/src/main/resources/: UN Sanctions List.csv  UN_Sanctions_List.csv  UN_Sanctions_List.xlsx
flink/jobs/ingest-batch-job/src/test/java/com/sanlam/ingest/flink/: AppTest.java
flink/jobs/ingest-stream-job/: dependency-reduced-pom.xml  package-submit-job.sh  pom.xml
flink/jobs/ingest-stream-job/src/main/java/com/sanlam/ingest/flink/: IngestJob.java
ingestion-agent/: .dockerignore  .env  Dockerfile  agent.compose.yml  build-and-push.sh  pyproject.toml  readme.md
ingestion-agent/app/: constants.py  ingest_dlq_producer.py  ingest_logs_producer.py  ingest_producer.py  main.py  util.py
kafka/: kafka-compose.yml
presentation/: presentation-compose.yml
timescale/: timescale-compose.yml
timescale/init/: 01_init.sql
(+2 files in other folders)
